services-diff-ns/ns1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: ns1
  labels:
    run: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: nginx
