services-diff-ns/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx
  namespace: ns1
spec:
  podSelector:
    matchLabels:
      run: nginx
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            run: nginx
      - namespaceSelector:
          matchLabels:
            run : labeldoesnotexistinns2 
      ports:
        - port: 80
